--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,11 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="theme-color" content="#319795" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="MockME - The fastest way to mock API calls."
     />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
