--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,10 +11,20 @@
       name="description"
       content="MockME - The fastest way to mock API calls."
     />
-
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
     <title>MockME App</title>
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700;900&display=swap");
+      body {
+        margin: 0;
+        padding: 0;
+        font-family: "Montserrat", sans-serif;
+        font-size: 16px;
+      }
+      body.dark-mode {
+        background: #000000;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
